--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -151,7 +151,7 @@
     <Compile Include="Catalog\ManufacturerTemplateService.cs" />
     <Compile Include="Catalog\ICategoryTemplateService.cs" />
     <Compile Include="Catalog\IProductTemplateService.cs" />
-    <Compile Include="Catalog\MergedProductVariant.cs" />
+    <Compile Include="Catalog\MergedProduct.cs" />
     <Compile Include="Catalog\ProductSearchContext.cs" />
     <Compile Include="Catalog\ProductTemplateService.cs" />
     <Compile Include="Catalog\ManufacturerExtensions.cs" />
