Product\ProductVariant refactoring of several catalog files

--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -139,7 +139,7 @@
     <Compile Include="Data\IDbContext.cs" />
     <Compile Include="Data\RepositoryExtensions.cs" />
     <Compile Include="Domain\Catalog\BasePriceQuotation.cs" />
-    <Compile Include="Domain\Catalog\IProduct.cs" />
+    <Compile Include="Domain\Catalog\IMergedProduct.cs" />
     <Compile Include="Domain\Catalog\ProductType.cs" />
     <Compile Include="Domain\Cms\ContentSliderSettings.cs" />
     <Compile Include="Domain\Common\CompanyInformationSettings.cs" />
