--- a/src/Presentation/SmartStore.Web/Administration/sitemap.config
+++ b/src/Presentation/SmartStore.Web/Administration/sitemap.config
@@ -10,12 +10,12 @@
 
       <siteMapNode id="products-header" isGroupHeader="true" title="Products" resKey="Admin.Catalog.Products" />
       <siteMapNode id="products" title="Manage products" resKey="Admin.Catalog.Products.Manage" controller="Product" action="List" area="Admin" />
-      <siteMapNode id="variants" title="Bulk edit product variants" resKey="Admin.Catalog.BulkEdit" controller="ProductVariant" action="BulkEdit" area="Admin" />
+      <siteMapNode id="products-bulk-edit" title="Bulk edit products" resKey="Admin.Catalog.BulkEdit" controller="Product" action="BulkEdit" area="Admin" />
 
       <siteMapNode id="reviews" title="Product reviews" resKey="Admin.Catalog.ProductReviews" controller="ProductReview" action="List" area="Admin" />
       <siteMapNode id="manufacturers" title="Manufacturers" resKey="Admin.Catalog.Manufacturers" controller="Manufacturer" action="List" area="Admin" />
       <siteMapNode id="tags" title="Product tags" resKey="Admin.Catalog.ProductTags" controller="Product" action="ProductTags" area="Admin" />
-      <siteMapNode id="stockreport" title="Low stock report" resKey="Admin.Catalog.LowStockReport" controller="ProductVariant" action="LowStockReport" area="Admin" />
+      <siteMapNode id="stockreport" title="Low stock report" resKey="Admin.Catalog.LowStockReport" controller="Product" action="LowStockReport" area="Admin" />
 
       <siteMapNode id="attributes-header" isGroupHeader="true" title="Attributes" resKey="Admin.Catalog.Attributes" />
       <siteMapNode id="attributes" title="Products attributes" resKey="Admin.Catalog.Attributes.ProductAttributes" controller="ProductAttribute" action="List" area="Admin" />
