--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -154,6 +154,7 @@
     <Compile Include="Catalog\IProductTemplateService.cs" />
     <Compile Include="Catalog\MergedProductVariant.cs" />
     <Compile Include="Catalog\ProductSearchContext.cs" />
+    <Compile Include="Catalog\ProductsSearchingEvent.cs" />
     <Compile Include="Catalog\ProductTemplateService.cs" />
     <Compile Include="Catalog\ManufacturerExtensions.cs" />
     <Compile Include="Catalog\ICopyProductService.cs" />
