Renamed "ShipmentOrderProductVariant" to "ShipmentItem"

--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -184,7 +184,7 @@
     <Compile Include="Domain\Seo\PageTitleSeoAdjustment.cs" />
     <Compile Include="Domain\Seo\SeoSettings.cs" />
     <Compile Include="Domain\Seo\UrlRecord.cs" />
-    <Compile Include="Domain\Shipping\ShipmentOrderProductVariant.cs" />
+    <Compile Include="Domain\Shipping\ShipmentItem.cs" />
     <Compile Include="Domain\Shipping\Shipment.cs" />
     <Compile Include="Domain\Tasks\ScheduleTask.cs" />
     <Compile Include="Domain\Messages\Events.cs" />
