--- a/src/Plugins/Feed.Froogle/SmartStore.Plugin.Feed.Froogle.csproj
+++ b/src/Plugins/Feed.Froogle/SmartStore.Plugin.Feed.Froogle.csproj
@@ -56,6 +56,10 @@
       <HintPath>..\..\packages\EntityFramework.6.0.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="FluentValidation">
+      <HintPath>..\..\packages\FluentValidation.5.0.0.1\lib\Net40\FluentValidation.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>False</Private>
       <HintPath>..\..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
@@ -129,6 +133,7 @@
     <Compile Include="RouteProvider.cs" />
     <Compile Include="Services\IGoogleService.cs" />
     <Compile Include="Services\GoogleService.cs" />
+    <Compile Include="Validators\ConfigurationValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Libraries\SmartStore.Core\SmartStore.Core.csproj">
