--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -154,6 +154,7 @@
     <Compile Include="Domain\Themes\ThemeVariable.cs" />
     <Compile Include="Extensions\HttpExtensions.cs" />
     <Compile Include="Extensions\XmlWriterExtensions.cs" />
+    <Compile Include="IMergedData.cs" />
     <Compile Include="IO\MimeTypes.cs" />
     <Compile Include="IStoreContext.cs" />
     <Compile Include="Linq\Expanders\IPathExpander.cs" />
