Web API did not load cause of new plugin system name

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -74,7 +74,7 @@
     <add key="TempDirectory" value="~/App_Data/_temp"/>
     <add key="BizImportMediaDirectory" value="~/Media/Uploaded/static"/>
     <add key="ApplicationName" value="SmartStore.NET"/>
-    <add key="PluginsIgnoredDuringInstallation" value="Misc.DemoShop, Misc.WebApi, Developer.Glimpse"/>
+    <add key="PluginsIgnoredDuringInstallation" value="Misc.DemoShop, Api.WebApi, Developer.Glimpse"/>
   </appSettings>
   <location path="Plugins/ImportBiz">
     <system.web>
