--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -224,6 +224,7 @@
     <Compile Include="Installation\InvariantInstallationData.cs" />
     <Compile Include="Localization\LocalizedEntityPostDeleteHook.cs" />
     <Compile Include="Logging\DeleteLogsTask.cs" />
+    <Compile Include="Logging\LogContext.cs" />
     <Compile Include="Media\CachedImageResult.cs" />
     <Compile Include="Media\IImageCache.cs" />
     <Compile Include="Media\IImageResizerService.cs" />
