--- a/src/Plugins/Api.WebApi/SmartStore.Plugin.Api.WebApi.csproj
+++ b/src/Plugins/Api.WebApi/SmartStore.Plugin.Api.WebApi.csproj
@@ -167,6 +167,10 @@
     <Compile Include="Controllers\OData\OrderNotesController.cs" />
     <Compile Include="Controllers\OData\OrdersController.cs" />
     <Compile Include="Controllers\OData\PicturesController.cs" />
+    <Compile Include="Controllers\OData\ProductVariantAttributeCombinationsController.cs" />
+    <Compile Include="Controllers\OData\ProductVariantAttributeValuesController.cs" />
+    <Compile Include="Controllers\OData\ProductVariantAttributesController.cs" />
+    <Compile Include="Controllers\OData\TierPricesController.cs" />
     <Compile Include="Controllers\OData\ProductAttributesController.cs" />
     <Compile Include="Controllers\OData\ProductsController.cs" />
     <Compile Include="Controllers\OData\RelatedProductsController.cs" />
