#231 Biz-Importer: Added app setting with the relative url for static media files

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -73,6 +73,7 @@
     <add key="ClearPluginsShadowDirectoryOnStartup" value="False"/>
     <add key="TempDirectory" value="~/App_Data/_temp"/>
     <add key="BizImportMediaDirectory" value="~/Media/Uploaded/static"/>
+		<add key="BizImportMediaUrl" value="/Media/Uploaded/static"/>
     <add key="ApplicationName" value="SmartStore.NET"/>
     <add key="PluginsIgnoredDuringInstallation" value="Misc.DemoShop, Api.WebApi, Developer.Glimpse"/>
   </appSettings>
