Product bundle: Attributes now can be filtered per bundle item and the pre-selection of a default value can be overwritten

--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Data\Hooks\PreUpdateHook.cs" />
     <Compile Include="Data\IDbContext.cs" />
     <Compile Include="Data\RepositoryExtensions.cs" />
+    <Compile Include="Domain\Catalog\ProductBundleItemAttributeFilter.cs" />
     <Compile Include="Domain\Catalog\ProductBundleItem.cs" />
     <Compile Include="Domain\Catalog\ProductType.cs" />
     <Compile Include="Domain\Cms\ContentSliderSettings.cs" />
