Excel Import: completely rewritten Excel import routines to make it smarter and faster * now it's magnitudes faster than before * the sort order of columns does not matter anymore * the only mandatory column for new records is "Name" * empty cells are not processed anymore, so smarter data updates can be run now * TBD: collect errors and warnings and push it to a log (DB or FS?) * TBD: run import async in background

--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -353,9 +353,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Less\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\Libraries\SmartStore.Core\SmartStore.Core.csproj">
       <Project>{6bda8332-939f-45b7-a25e-7a797260ae59}</Project>
