--- a/src/Tests/SmartStore.Core.Tests/SmartStore.Core.Tests.csproj
+++ b/src/Tests/SmartStore.Core.Tests/SmartStore.Core.Tests.csproj
@@ -66,7 +66,7 @@
     <Compile Include="Domain\Shipping\ShippingOptionListTypeConverterTests.cs" />
     <Compile Include="Domain\Stores\StoreExtensionsTests.cs" />
     <Compile Include="Infrastructure\DependencyManagement\AutofacTests.cs" />
-    <Compile Include="CommonHelperTests.cs" />
+    <Compile Include="ConversionTests.cs" />
     <Compile Include="WebHelperTests.cs" />
     <Compile Include="ComponentModel\GenericListTypeConverterTests.cs" />
     <Compile Include="ExtensionsTests.cs" />
